--- a/src/assets/styles/calendar.css
+++ b/src/assets/styles/calendar.css
@@ -1,19 +1,21 @@
 /* 멀티데이 이벤트 스타일 */
 .multi-day-event {
-  margin: 1px 0;
-  overflow: hidden;
-  border-radius: 0 !important;
+  margin: 1px 0 !important;
+  overflow: hidden !important;
+  height: 22px !important;
 }
 
 /* 이벤트 시작 날짜 스타일 */
-.event-start {
-  border-top-left-radius: 4px !important;
-  border-bottom-left-radius: 4px !important;
+.event-start, 
+.fc-event.fc-daygrid-block-event.fc-event-start,
+.fc-event.fc-event-start {
+  border-top-left-radius: 25px !important;
+  border-bottom-left-radius: 25px !important;
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   margin-right: 0 !important;
   border-right: 0 !important;
-  padding-left: 4px !important;
+  padding-left: 6px !important;
 }
 
 /* 이벤트 중간 날짜 스타일 */
@@ -26,24 +28,43 @@
 }
 
 /* 이벤트 종료 날짜 스타일 */
-.event-end {
-  border-top-right-radius: 4px !important;
-  border-bottom-right-radius: 4px !important;
+.event-end,
+.fc-event.fc-daygrid-block-event.fc-event-end,
+.fc-event.fc-event-end {
+  border-top-right-radius: 25px !important;
+  border-bottom-right-radius: 25px !important;
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
   margin-left: 0 !important;
   border-left: 0 !important;
-  padding-right: 4px !important;
+  padding-right: 6px !important;
+}
+
+/* 단일 일정 스타일 (시작과 종료가 같은 날짜) */
+.fc-event.fc-daygrid-block-event.fc-event-start.fc-event-end,
+.fc-event.fc-event-start.fc-event-end,
+.fc-daygrid-event.fc-daygrid-block-event.fc-event-start.fc-event-end,
+.single-day-event,
+.event-start-end {
+  border-radius: 25px !important;
+  padding-left: 6px !important;
+  padding-right: 6px !important;
+  overflow: hidden !important;
+}
+
+/* 일반 이벤트 스타일 강화 - 모든 싱글 이벤트에 둥근 모서리 적용 */
+.fc-daygrid-event.fc-daygrid-dot-event {
+  border-radius: 25px !important;
 }
 
 /* 멀티데이 이벤트 내용 컨테이너 */
 .multi-day-event-content {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: flex-start;
-  overflow: hidden;
-  white-space: nowrap;
+  display: flex !important;
+  align-items: center !important;
+  width: 100% !important;
+  justify-content: flex-start !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
 }
 
 /* 이벤트 시작일 제목 스타일 */
@@ -154,14 +175,28 @@
 }
 
 .fc-event {
-  border-radius: 4px;
+  border-radius: 25px !important;  /* 모든 이벤트에 둥근 모서리 기본 적용 */
   border: none;
   font-size: 0.9em;
 }
 
+/* 모든 이벤트 유형에 둥근 모서리 적용 */
 .fc-event.fc-v-event {
   border-left-width: 3px;
   border-left-style: solid;
+  border-radius: 25px !important;
+}
+
+.fc-h-event {
+  border-radius: 25px !important;
+}
+
+.fc-daygrid-event {
+  border-radius: 25px !important;
+}
+
+.fc-daygrid-block-event {
+  border-radius: 25px !important;
 }
 
 .fc-daygrid-block-event .fc-event-time,
@@ -181,13 +216,21 @@
 
 /* 연속 일정의 시작과 끝 부분 스타일 */
 .fc-event.fc-daygrid-block-event.fc-event-start {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-top-left-radius: 25px !important;
+  border-bottom-left-radius: 25px !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
 }
 
 .fc-event.fc-daygrid-block-event.fc-event-end {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-top-right-radius: 25px !important;
+  border-bottom-right-radius: 25px !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.fc-event.fc-daygrid-block-event.fc-event-start.fc-event-end {
+  border-radius: 25px !important;
 }
 
 /* 요일 헤더 영역 숨기기 */
@@ -372,7 +415,6 @@ div.fc-daygrid-day-top > a.fc-daygrid-day-number {
 /* 멀티데이 이벤트 스타일 개선 */
 .multi-day-event {
   margin: 1px 0 !important;
-  border-radius: 4px !important;
   font-weight: 500 !important;
   color: #353535 !important;
   height: 22px !important;
@@ -391,6 +433,8 @@ div.fc-daygrid-day-top > a.fc-daygrid-day-number {
   border-right: 0 !important;
   min-width: calc(100% - 2px) !important;
   padding-right: 0 !important;
+  border-top-left-radius: 25px !important;
+  border-bottom-left-radius: 25px !important;
 }
 
 .event-middle {
@@ -412,6 +456,17 @@ div.fc-daygrid-day-top > a.fc-daygrid-day-number {
   border-bottom-left-radius: 0 !important;
   border-left: 0 !important;
   padding-left: 4px !important;
+  border-top-right-radius: 25px !important;
+  border-bottom-right-radius: 25px !important;
+}
+
+/* 이벤트가 시작과 끝이 동시에 표시될 때 */
+.fc-event.fc-daygrid-block-event.fc-event-start.fc-event-end,
+.fc-daygrid-event.fc-daygrid-block-event.fc-event-start.fc-event-end,
+.fc-event-start.fc-event-end,
+.event-start-end {
+  border-radius: 25px !important;
+  overflow: hidden !important;
 }
 
 .special-multi-day-event {
@@ -563,4 +618,13 @@ div.fc-daygrid-day-top > a.fc-daygrid-day-number {
   .after-due-date-image {
     max-height: calc(85vh - 120px);
   }
+}
+
+/* 단일 및 멀티데이 이벤트 모두에 적용되는 둥근 모서리 강제 적용 */
+.fc-daygrid-event,
+.fc-event,
+.fc-h-event,
+.fc-v-event,
+.custom-event {
+  border-radius: 25px !important;
 } 
